<?xml version="1.0"?>
<package>
  <name>blam_slam</name>
  <version>0.0.0</version>
  <description>The blam_slam package</description>

  <author email="eanelson@eecs.berkeley.edu">Erik Nelson</author>
  <maintainer email="eanelson@eecs.berkeley.edu">Erik Nelson</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>measurement_synchronizer</build_depend>
  <build_depend>point_cloud_filter</build_depend>
  <build_depend>point_cloud_odometry</build_depend>
  <build_depend>laser_loop_closure</build_depend>
  <build_depend>point_cloud_mapper</build_depend>
  <build_depend>point_cloud_localization</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>measurement_synchronizer</run_depend>
  <run_depend>point_cloud_filter</run_depend>
  <run_depend>point_cloud_odometry</run_depend>
  <run_depend>laser_loop_closure</run_depend>
  <run_depend>point_cloud_mapper</run_depend>
  <run_depend>point_cloud_localization</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
</package>
